# ntf

./: .gitignore  .gitmodules  .swiftlint.yml  CMakeLists.txt  Package.swift  README.md
Docs/: CMakeLists.txt  DeviceStream.drawio  DeviceStreamQueue.drawio  NTFStreams.md
Docs/Diagrams/: MultiStreamSync.drawio  StreamRecordedEvents.drawio  TensorStructure
Libraries/Cuda/: include_cuda.h  module.modulemap
Libraries/Jpeg/: include_jpeg.h  module.modulemap
Libraries/Png/: include_png.h  module.modulemap
Libraries/ZLib/: include_zlib.h  module.modulemap
Sources/DeepLearning/: Functions.swift  Loss.swift
Sources/Netlib/: AnyScalar.swift  AtomicCounter.swift  BinaryCodable.swift  BinaryEncoder.swift  Context.swift  CpuComputeService.swift  CpuContext.swift  CpuDevice.swift  CudaContext.swift  DataShape.swift  DeepLearning.swift  Device.swift  EvaluationContext.swift  Float16.swift  Function.swift  FunctionIds.swift  Gradients.swift  Intrinsics.swift  Log.swift  ObjectTracker.swift  Ops.swift  Platform.swift  Shape.swift  TensorData.swift  TensorShape.swift  TensorView.swift  ThreadLocal.swift
Sources/Netlib/CpuService/: CpuComputeService.swift  CpuDevice.swift  CpuDeviceArray.swift  CpuStream.swift  CpuStreamEvent.swift  CpuStreamIntrinsics.swift  CpuStreamOps.swift
Sources/Netlib/Ops/: AddSubMulDiv.swift  ElementWise.swift  Logical.swift  Reductions.swift
Sources/Netlib/TFOps/: AddSubMulDiv.swift  ElementWise.swift  Logical.swift  Ops.swift  Reductions.swift
Sources/Netlib/common/: AnyScalar.swift  FormattedView.swift  Helpers.swift  Log.swift  ObjectTracker.swift  Zip3.swift
Sources/Netlib/core/: AnyScalar.swift  AtomicCounter.swift  DataShape.swift  DataShapeIterators.swift  Device.swift  DeviceStream.swift  Float16.swift  FormattedView.swift  FunctionIds.swift  Helpers.swift  Log.swift  Mutex.swift  Platform.swift  ShapedTensors.swift  StreamGradients.swift  StringFormattedView.swift  TensorData.swift  TensorDataView.swift  TensorIndex.swift  TensorShape.swift  TensorView.swift  TensorViewIterators.swift  ThreadLocal.swift  ThreadLocalStream.swift
Sources/Netlib/data/: gzip.swift
Sources/Netlib/device/: Device.swift  DeviceError.swift  DeviceStream.swift  LocalPlatform.swift  StreamGradients.swift  Streams.swift  ThreadLocalStream.swift  _Streams.swift
Sources/Netlib/device/cpu/: CpuComputeService.swift  CpuDevice.swift  CpuDeviceArray.swift  CpuStream.swift  CpuStreamEvent.swift  CpuStreamIntrinsics.swift
Sources/Netlib/device/cuda/: CudaComputeService.swift  CudaDevice.swift  CudaDeviceArray.swift  CudaStream.swift  CudaStreamEvent.swift  CudaStreamIntrinsics.swift
Sources/Netlib/ops/: AddSubMulDiv.swift  ElementWise.swift  Logical.swift  Reductions.swift  Test.swift
Sources/Netlib/quantize/: QTensors.swift  Quantizable.swift  Quantizer.swift  Quantizing.swift
Sources/Netlib/tensor/: AnyScalar.swift  DataArray.swift  FixedSizeVector.swift  FormattedView.swift  MatrixIndex.swift  ObjectTracker.swift  QTensorIndexing.swift  QTensors.swift  Quantize.swift  QuantizedIndexing.swift  Quantizer.swift  ShapedTensors.swift  StructuredScalars.swift  TensorArray.swift  TensorData.swift  TensorIndex.swift  TensorIndexes.swift  TensorIndexing.swift  TensorIterate.swift  TensorShape.swift  TensorView.swift  Tensors.swift
Tests/: LinuxMain.swift
Tests/NetlibTests/: CodableTests.swift  NetlibTests.swift  XCTestManifests.swift  test_Async.swift  test_Codable.swift  test_DataMigration.swift  test_DataShape.swift  test_IterateView.swift  test_Ops.swift  test_QConverter.swift  test_Quantization.swift  test_Quantize.swift  test_Stream.swift  test_StreamOps.swift  test_Syntax.swift  test_TensorView.swift  test_TensorViewCollection.swift  test_XCTestManifests.swift
